--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 </head>
 <body class="roboto-regular">
     <header class="bg-[#FFFBF0] pl-4">
-        <nav>
-
+        <nav class="">
+            <div class="lg:flex justify-around items-center py-10 md:flex">
+                <img class="max-w-72" src="images/icons/logo.png" alt="">
+                <ul class="flex gap-4 font-medium">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Product</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+            </div>     
         </nav>
         <div class="md:flex items-center justify-around">
             <div>
@@ -30,5 +38,135 @@
             </div>
         </div>
     </header>
+    <main class="max-w-7xl mx-auto">
+        <!-- women jacket section -->
+         <section class="my-12">
+            <h3 class="text-5xl uppercase text-[#363958]">Women Jacket</h3>
+            <!-- jacket card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- jacket card 1 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-1.png" alt="">
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+                   <!-- jacket card 2 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-2.png" alt="">
+                    <h4 class="text-2xl font-bold">Ladies Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+                   <!-- jacket card 3 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-3.png" alt="">
+                    <h4 class="text-2xl font-bold">Women Leather Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+            </div>
+         </section>
+        <!-- Men jacket section -->
+         <section class="my-12">
+            <h3 class="text-5xl uppercase text-[#363958]">men jacket</h3>
+            <!-- jacket card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- jacket card 1 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-4.png" alt="">
+                    <h4 class="text-2xl font-bold">Snowboard Jacket Mens</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+                   <!-- jacket card 2 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-5.png" alt="">
+                    <h4 class="text-2xl font-bold">Man Leather Jackets</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+                   <!-- jacket card 3 -->
+                 <div class="p-5 space-y-4 rounded-3xl drop-shadow-lg">
+                    <img class="p-5 rounded-3xl bg-[#F1F1F1]" src="images/jacket-6.png" alt="">
+                    <h4 class="text-2xl font-bold">Man Casual Jackets</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button class="bg-green-600 font-medium text-white py-4 px-8 rounded-xl bg-gradient-to-r from-[#A4BC46] to-[#85A019]"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /> </svg>
+                        BUY NOW</button>
+                    </div>
+                 </div>
+            </div>
+         </section>
+         <!-- product description section -->
+          <section class="my-12 lg:flex lg:flex-row-reverse lg:justify-center">
+            <div>
+                <img class="pl-5" src="images/shopping.png" alt="">
+            </div>
+            <div class="space-y-8 p-4 my-12">
+                <div class="flex items-center gap-9 drop-shadow-xl bg-white p-4 rounded-2xl">
+                    <div>
+                        <img src="images/icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold text-[#363958]">Find the Perfect Fit</h4>
+                        <p class="text-[#3E3E3E]">Everybody is different, which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="flex items-center gap-9 drop-shadow-xl bg-white p-4 rounded-2xl">
+                    <div>
+                        <img src="images/icons/box.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold text-[#363958]">Free Exchanges</h4>
+                        <p class="text-[#3E3E3E]">One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="flex items-center gap-9 drop-shadow-xl bg-white p-4 rounded-2xl">
+                    <div>
+                        <img src="images/icons/question.png" alt="">
+                    </div>
+                    <div>
+                        <h4 class="text-2xl font-bold text-[#363958]">Contact Our Seller</h4>
+                        <p class="text-[#3E3E3E]">They are here to help you. That's quite  literally what we pay them for.</p>
+                    </div>
+                </div>
+                
+            </div>
+          </section>
+    </main>
 </body>
 </html>
